<resources>
    <string name="app_name">Employment Recommendation App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_screen1">testScreen1</string>
    <string name="yourSelection">Your Selection:</string>
    <string name="title_activity_test_screen2">testScreen2</string>
    <string name="title_activity_test_screen3">testScreen3</string>
    <string name="title_activity_test_screen4">testScreen4</string>
    <string name="title_activity_test_screen5">testScreen5</string>
    <string name="ts1mq">When I make decisions, I like to:</string>
    <string name="ts1a1">make them quickly and move on</string>
    <string name="title_activity_results_screen">resultsScreen</string>
    <string name="welcome">Welcome!</string>
    <string name="about">This application will tell help you find a job you love!</string>
    <string name="directions">Simply touch the answer to make your selection</string>
    <string name="startTest">Start Test</string>
    <string name="ts1a2">take my time learning about the decision and think it through</string>
    <string name="ts1a3">think about others and choose what is best for everyone</string>
    <string name="ts1a4">look at what others have done and do that</string>
    <string name="nextQuestion">Next question</string>
    <string name="ts2headline">My friends think I am:</string>
    <string name="ts2a1">energtic and and willing to try new things</string>
    <string name="ts2a2">factual and unemotional</string>
    <string name="ts2a3">good listener and friendly</string>
    <string name="ts2a4">hard worker they can count on</string>
    <string name="ts3headline">I need to:</string>
    <string name="ts3a1">be free and do things I want to do</string>
    <string name="ts3a2">be creative and make things</string>
    <string name="ts3a3">help people get closer together</string>
    <string name="ts3a4">keep my life organized</string>
    <string name="ts4heading">When a problem arises, people look to me for:</string>
    <string name="ts4a1">bravery</string>
    <string name="ts4a2">knowledge</string>
    <string name="ts4a3">empathy</string>
    <string name="ts4a4">perspective</string>
    <string name="ts5heading">Choose your favorite image.</string>
    <string name="seeResults">See Results</string>
    <string name="results">Results</string>
    <string name="placeholder">placeholder</string>
</resources>
