<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:text="@string/ts2headline" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/ts2a1"
        android:onClick="onClickToast1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/ts2a2"
        android:onClick="onClickToast2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/ts2a3"
        android:onClick="onClickToast3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/ts2a4"
        android:onClick="onClickToast4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/yourSelection"
        android:onClick="onClickToast4"/>

    <TextView android:id="@+id/yourSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text=""
        android:onClick="onClickToast4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextQuestion"
        android:layout_marginTop="50dp"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickStartTestScreen3"/>

</LinearLayout>
