<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="45sp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:paddingTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/about" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/directions" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTest"
        android:layout_marginTop="100dp"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickStartTest"/>

</LinearLayout>
