<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/ts5heading"
        android:textColor="#000000"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:onClick="onClickToast1"
            android:padding="15dp"
            android:src="@drawable/parachute" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:onClick="onClickToast2"
            android:padding="15dp"
            android:src="@drawable/gear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:onClick="onClickToast1"
            android:padding="15dp"
            android:src="@drawable/heart"

            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:onClick="onClickToast2"
            android:padding="15dp"
            android:src="@drawable/clock" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:onClick="onClickToast4"
        android:padding="10dp"
        android:text="@string/yourSelection"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/yourSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:onClick="onClickToast4"
        android:padding="10dp"
        android:text=""
        android:textSize="15sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="onClickStartTestScreen5"
        android:text="@string/seeResults" />

</LinearLayout>
